--- a/problemSets/example/PS01_answersJZ.tex
+++ b/problemSets/example/PS01_answersJZ.tex
@@ -60,8 +60,8 @@
 \lstset{style=mystyle}
 \newcommand{\Sref}[1]{Section~\ref{#1}}
 
-\title{Example PS Response}
-\date{Jeffrey Ziegler}
+\title{ PS01 Response}
+\date{Zexi Wang}
 \author{Applied Stats/Quant Methods 1}
 
 \begin{document}
@@ -71,13 +71,11 @@
 
  \textit{This is a template from which you can reference to create your own responses in \texttt{R} and \texttt{Latex}.}
 
-\section*{Question 1 }
-
-\textit{Example Prompt.}\\
+\section*{Question 1: Education }
 
 \vspace{.25cm}
 
-\noindent Maybe you need to load in my dataset first, so let's show you how to 'present' that information. You can merely 'show' us that you read in the data by 'printing' your code. \\
+\noindent A school counselor was curious about the average of IQ of the students in her school and took a random sample of 25 students’ IQ scores. The following is the data set:\\
 
 \lstinputlisting[language=R, firstline=40, lastline=40]{PS01_answersJZ.R}  
 
