--- a/problemSets/PS04/my_answers/PS4_Zexi_Wang.tex
+++ b/problemSets/PS04/my_answers/PS4_Zexi_Wang.tex
@@ -62,7 +62,7 @@
 
 
 \title{Problem Set 4}
-\date{Due: November 18, 2024}
+\date{Zexi Wang}
 \author{Applied Stats/Quant Methods 1}
 
 
@@ -98,36 +98,81 @@ help(Prestige)
 	
 	\item [(a)]
 	Create a new variable \texttt{professional} by recoding the variable \texttt{type} so that professionals are coded as $1$, and blue and white collar workers are coded as $0$ (Hint: \texttt{ifelse}).
-	
-	\vspace{6cm}
-	
+	\lstinputlisting[language=R, firstline=34, lastline=44]{PS4_Zexi_Wang.R}
 	
 	\item [(b)]
 	Run a linear model with \texttt{prestige} as an outcome and \texttt{income}, \texttt{professional}, and the interaction of the two as predictors (Note: this is a continuous $\times$ dummy interaction.)
+	\lstinputlisting[language=R, firstline=45, lastline=49]{PS4_Zexi_Wang.R}
+	\begin{footnotesize}
+	\begin{verbatim}
+	================================================
+	Dependent variable:    
+	---------------------------
+	prestige          
+	------------------------------------------------
+	income                        0.003***          
+	(0.0005)          
 	
-	\vspace{6cm}
+	professional1                 37.781***         
+	(4.248)          
+	
+	income:professional1          -0.002***         
+	(0.001)          
+	
+	Constant                      21.142***         
+	(2.804)          
+	
+	------------------------------------------------
+	Observations                     98             
+	R2                              0.787           
+	Adjusted R2                     0.780           
+	Residual Std. Error        8.012 (df = 94)      
+	F Statistic            115.878*** (df = 3; 94)  
+	================================================
+	Note:                *p<0.1; **p<0.05; ***p<0.01
+	\end{verbatim}
+	\end{footnotesize} 
+
 	\item [(c)]
 	Write the prediction equation based on the result.
-	
-\newpage
+	\begin{equation*}
+ Prestige = 21.142 + 0.003*Income + 37.781*Professional - 0.002*Income*Professional 
+    \end{equation*}
+
 	\item [(d)]
 	Interpret the coefficient for \texttt{income}.
-	
-	\vspace{10cm}	
+	\begin{verbatim}
+The coefficient for income in the regression model indicates the 
+expected change in the prestige score for each additional dollar 
+earned.For blue-collar and white-collar workers, for each additional 
+dollar of income, the prestige score is expected to increase by 
+0.003 on average.
+	\end{verbatim}
+		
 	\item [(e)]
 	Interpret the coefficient for \texttt{professional}.
+	\begin{verbatim}
+The coefficient for professional shows the expected change in prestige 
+score when moving from a white-collar or blue-collar position to a 
+professional role, with income at zero. A professional worker is 
+expected to have a prestige score that is 37.781 points higher 
+than an equally low-income white-collar or blue-collar worker.
+	\end{verbatim}
 	
-	\newpage
 	\item [(f)]
 	What is the effect of a \$1,000 increase in income on prestige score for professional occupations? In other words, we are interested in the marginal effect of income when the variable \texttt{professional} takes the value of $1$. Calculate the change in $\hat{y}$ associated with a \$1,000 increase in income based on your answer for (c).
-	
-	\vspace{10cm}
-	
+	\lstinputlisting[language=R, firstline=60, lastline=62]{PS4_Zexi_Wang.R}
+	\begin{verbatim}
+The marginal increase in prestige score is 0.8452
+	\end{verbatim}
 	
 	\item [(g)]
 	What is the effect of changing one's occupations from non-professional to professional when her income is \$6,000? We are interested in the marginal effect of professional jobs when the variable \texttt{income} takes the value of $6,000$. Calculate the change in $\hat{y}$ based on your answer for (c).
-	
-	
+	\lstinputlisting[language=R, firstline=63, lastline=65]{PS4_Zexi_Wang.R}
+	\begin{verbatim}
+Changing one's occupation from a non-professional to a professional worker 
+at an income of $6,000 results in an increase of 23.83 in the prestige score.
+	\end{verbatim}
 \end{enumerate}
 
 \newpage
@@ -158,18 +203,33 @@ a precinct that was adjacent to a precinct in the treatment group (since people 
 	\footnotesize{\textit{Notes:} $R^2$=0.094, N=131}
 \end{table}
 
-\vspace{.5cm}
 \begin{enumerate}
 	\item [(a)] Use the results from a linear regression to determine whether having these yard signs in a precinct affects vote share (e.g., conduct a hypothesis test with $\alpha = .05$).
-	
-	\newpage		
+	\lstinputlisting[language=R, firstline=66, lastline=75]{PS4_Zexi_Wang.R}
+	\begin{verbatim}
+H0:lawn yard signs do not affect vote share (effect = 0)
+Ha:lawn yard signs do affect vote share
+
+Given that the p-value of 0.0097 is less than the significance level of 0.05, 
+we reject the null hypothesis, providing statistically significant evidence 
+that lawn signs in a precinct do have an effect on vote share.
+    \end{verbatim}
+		
 	\item [(b)]  Use the results to determine whether being
 	next to precincts with these yard signs affects vote
 	share (e.g., conduct a hypothesis test with $\alpha = .05$).
-	
-	\vspace{7cm}
+	\lstinputlisting[language=R, firstline=76, lastline=82]{PS4_Zexi_Wang.R}
+	\begin{verbatim}
+H0:being next to precincts with these yard signs does not affect vote share
+Ha:being next to precincts with these yard signs affects vote share
+
+Since the p-value of 0.0015 is less than the significance level of 0.05, we 
+reject the null hypothesis, providing statistically significant evidence 
+that precincts next to yard signs do have an effect on vote share.
+    \end{verbatim}
+
 	\item [(c)] Interpret the coefficient for the constant term substantively.
-	\vspace{7cm}
+
 	
 	\item [(d)] Evaluate the model fit for this regression.  What does this	tell us about the importance of yard signs versus other factors that are not modeled?
 	
