--- a/problemSets/PS04/my_answers/PS4_Zexi_Wang.tex
+++ b/problemSets/PS04/my_answers/PS4_Zexi_Wang.tex
@@ -229,10 +229,23 @@ that precincts next to yard signs do have an effect on vote share.
     \end{verbatim}
 
 	\item [(c)] Interpret the coefficient for the constant term substantively.
-
-	
+	\begin{verbatim}
+The constant coefficient of 0.302 represents the baseline vote share in 
+precincts without lawn signs and not adjacent to any precincts with lawn 
+signs, indicating that the expected vote share for Ken Cuccinelli is 0.302 
+in the control group, assuming other factors remain constant.
+    \end{verbatim}
+    
 	\item [(d)] Evaluate the model fit for this regression.  What does this	tell us about the importance of yard signs versus other factors that are not modeled?
-	
+	\begin{verbatim}
+The R-squared value of 0.094 indicates that approximately 9.4% of the 
+variance in vote share is accounted for by the presence of lawn signs 
+in and adjacent to precincts. This implies that although lawn signs may 
+have some influence, a considerable amount of the variance in vote share 
+is likely due to other unaccounted factors.The model might be missing 
+key variables, suggesting that lawn signs and nearby lawn signs alone 
+may not adequately explain the variation in the proportion of votes.
+    \end{verbatim}
 \end{enumerate}  
 
 
